[gd_scene load_steps=6 format=3 uid="uid://db1tvuq63ewte"]

[ext_resource type="Script" path="res://src/player.gd" id="1_1r80b"]
[ext_resource type="AudioStream" uid="uid://dk0ecei4v4i34" path="res://res/DashSFX.wav" id="3_hocf0"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rmvda"]
radius = 5.43
height = 20.43

[sub_resource type="Gradient" id="Gradient_p3hpk"]
offsets = PackedFloat32Array(0, 0.331169)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_l6q1k"]
gradient = SubResource("Gradient_p3hpk")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(7, 0.5)

[node name="CharacterBody2D" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_1r80b")
JUMP_QUEUE_GRACE_PERIOD = 0.125

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_rmvda")

[node name="DashSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_hocf0")

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="PointLight2D" type="PointLight2D" parent="."]
scale = Vector2(4.5, 4.5)
blend_mode = 2
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.470588)
shadow_filter_smooth = 0.5
texture = SubResource("GradientTexture2D_l6q1k")

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
